--- a/modules/templates/client/views/template-edit.html
+++ b/modules/templates/client/views/template-edit.html
@@ -3,94 +3,97 @@
 </h1>
 	<div class="block-content">
 		<div class="panel-body">
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="documentType" class="control-label">For Document Type</label>
-					<select id="documentType" ng-model='template.documentType' class="form-control input-sm" ng-options="type in types"></select>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label class="control-label">Sections</label>
-					<button ng-click="addSection()">Append Section</button>
-				</div>
-			</div>
-		</div>
-		<div class="row" ng-repeat="section in template.sections">
 			<div class="row">
-			<div class="form-group">
-				<div class="col-sm-12">
-					<label for="sname" class="input-label">Topic Name</label>
-					<input id="title" type="text" class="form-control  input-lg" ng-model="topic.name">
-				</div>
-			</div>
-			</div>
-			<div class="row" ng-if="section.multiple">
-				<div class="col-sm-12">
+				<div class="col-sm-6">
 					<div class="form-group">
-						<label for="shortDesc" class="control-label">Header</label>
-						<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.description" rows=6></textarea>
+						<label for="documentType" class="control-label">For Document Type</label>
+						<select ng-disabled="which=='edit'" id="documentType" ng-model='template.documentType' class="form-control input-sm" ng-options="type as type for type in types"></select>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-sm-12">
+			<div class="row" >
+				<h4>Sections</h4>
+				<button ng-click="addSection()">Append Section</button>
+				<div style="margin-left:20px" ng-repeat="section in template.sections">
 					<div class="form-group">
-						<label for="shortDesc" class="control-label">Template</label>
-						<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.description" rows=6></textarea>
+						<hr/>
+						<div class="col-sm-4">
+							<label for="name" class="control-label">Section Name</label>
+							<input id="name" type="text" class="form-control input-sm" ng-model="section.name">
+						</div>
+						<div class="col-sm-2">
+							<label for="optional" class="control-label checkbox-inline">Optional
+							<input id="optional" type="checkbox" class="form-control input-sm" ng-model="section.optional">
+							</label>
+						</div>
+						<div class="col-sm-2">
+							<label for="multiple" class="control-label checkbox-inline">Multiple
+							<input id="multiple" type="checkbox" class="form-control input-sm" ng-model="section.multiple">
+							</label>
+						</div>
+						<div class="col-sm-2" ng-if="section.multiple">
+							<label for="isheader" class="control-label checkbox-inline">Header
+							<input id="isheader" type="checkbox" class="form-control input-sm" ng-model="section.isheader">
+							</label>
+						</div>
+						<div class="col-sm-2" ng-if="section.multiple">
+							<label for="isfooter" class="control-label checkbox-inline">Footer
+							<input id="isfooter" type="checkbox" class="form-control input-sm" ng-model="section.isfooter">
+							</label>
+						</div>
 					</div>
-				</div>
-			</div>
-			<div class="row" ng-if="section.multiple">
-				<div class="col-sm-12">
-					<div class="form-group">
-						<label for="shortDesc" class="control-label">Footer</label>
-						<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.description" rows=6></textarea>
+					<div  ng-if="section.multiple && section.isheader">
+						<div class="col-sm-12">
+							<div class="form-group">
+								<label for="shortDesc" class="control-label">Header (Optional)</label>
+								<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.header" rows=6></textarea>
+							</div>
+						</div>
 					</div>
+					<div >
+						<div class="col-sm-12">
+							<div class="form-group">
+								<label for="shortDesc" class="control-label">Template</label>
+								<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.template" rows=6></textarea>
+							</div>
+						</div>
+					</div>
+					<div  ng-if="section.multiple && section.isfooter">
+						<div class="col-sm-12">
+							<div class="form-group">
+								<label for="shortDesc" class="control-label">Footer (Optional)</label>
+								<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="section.footer" rows=6></textarea>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-12">
+						<h5>Variables</h5>
+						<button ng-click="addVariable(section.meta)">Add Variable</button>
+					</div>
+					<div style="margin-left:20px" ng-repeat="field in section.meta">
+						<hr/>
+						<div class="form-group">
+							<div class="col-sm-3">
+								<label for="name" class="control-label">Variable Name (no spaces)</label>
+								<input id="name" type="text" class="form-control input-sm" ng-model="field.name">
+							</div>
+							<div class="col-sm-3">
+								<label for="label" class="control-label">Label</label>
+								<input id="label" type="text" class="form-control input-sm" ng-model="field.label">
+							</div>
+							<div class="col-sm-3">
+								<label for="type" class="radio-inline">
+								<input name="type" type="radio" ng-model="field.type" value="Text">Text</label>
+								<label for="type" class="radio-inline">
+								<input name="type" type="radio" ng-model="field.type" value="Html">Html</label>
+							</div>
+							<div class="col-sm-3">
+								<label for="default" class="control-label">Default value</label>
+								<input id="default" type="text" class="form-control input-sm" ng-model="field.default">
+							</div>
+						</div>
 				</div>
 			</div>
-		</div>
-
-
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="form-group">
-					<label for="shortDesc" class="control-label">Report Requirements</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="template.reportRequirements" rows=6></textarea>
-				</div>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="pillar" class="control-label">Pillar</label>
-					<select ng-change="selectTopic(pillar)" id="pillar" ng-model='template.pillar' class="form-control input-sm" ng-options="pillar.id as pillar.title for pillar in pillars"></select>
-				</div>
-			</div>
-
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="stage" class="control-label">Project Stage</label>
-					<select id="stage" ng-model='template.stage' class="form-control input-sm" ng-options="stage.id as stage.title for stage in stages"></select>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="topics" class="control-label">Topics</label>
-					<select multiple id="topics" ng-model='template.topics' class="form-control input-sm"
-					ng-options="topic.code as topic.name for topic in topics">
-					</select>
-				</div>
-			</div>
-
-		</div>
-
 		</div>
 	</div>
 
