--- a/modules/templates/client/views/template-list.html
+++ b/modules/templates/client/views/template-list.html
@@ -12,12 +12,12 @@
 					<tr ng-repeat="o in $data" ui-sref="admin.template.detail({templateId:o.id})">
 						<td title="'Document Type'"    filter="{'documentType':'text'}"  sortable="'name'">{{o.documentType}}</td>
 						<td title="'Version Number'"                sortable="'versionNumber'" >{{o.versionNumber}}</td>
-						<td title="'Date Updated'"                    sortable="'dateUpdated'" >{{o.id}}</td>
-					<td>
-						<a ng-click="$event.stopPropagation()" class="btn btn-default btn-xs" ui-sref="admin.template.edit({templateId:o.id})">
-						<i class="glyphicon glyphicon-pencil"></i>
-						</a>
-					</td>
+						<td title="'Date Updated'"                    sortable="'dateUpdated'" >{{o.dateUpdated | date:'y-MM-dd HH:mm'}}</td>
+						<td>
+							<a ng-click="$event.stopPropagation()" class="btn btn-default btn-xs" ui-sref="admin.template.edit({templateId:o.id})">
+							<i class="glyphicon glyphicon-pencil"></i>
+							</a>
+						</td>
 				</tr>
 			</table>
 		</section>
