--- a/modules/templates/client/views/template-view.html
+++ b/modules/templates/client/views/template-view.html
@@ -4,42 +4,47 @@
 <div class="block-content">
 	<div class="panel-body">
 	<div class="row">
-		<table class="table table-striped table-condensed">
-		<tr> <td>Document Type</td>  <td>{{template.documentType}}</td> </tr>
-		<tr> <td>Version Number</td>  <td>{{template.versionNumber}}</td> </tr>
-		<tr> <td>Date Updated</td>  <td>{{template.dateUpdated}}</td> </tr>
-		<tr> <td>Sections</td>  <td>
+		<div class="col-sm-3">Document Type</div>
+		<div class="col-sm-9">{{template.documentType}}</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-3">Version Number</div>
+		<div class="col-sm-9">{{template.versionNumber}}</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-3">Date Updated</div>
+		<div class="col-sm-9">{{template.dateUpdated}}</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-3">Sections</div>
+	</div>
+	<div class="row" ng-repeat="section in template.sections">
+		<div class="col-sm-2">&nbsp;</div>
+		<div class="col-sm-10">
+			<hr/>
+			<div class="row"><div class="col-sm-3">Name</div><div class="col-sm-9">{{section.name}}</div></div>
+			<div class="row"><div class="col-sm-3">Multiple</div><div class="col-sm-9">{{section.multiple}}</div></div>
+			<div class="row"><div class="col-sm-3">Optional</div><div class="col-sm-9">{{section.optional}}</div></div>
+			<div class="row"><div class="col-sm-3">Template</div><div class="col-sm-9"><textarea disabled="true" width="100%">{{section.template}}</textarea></div></div>
+			<div class="row"><div class="col-sm-3">Variables</div></div>
 
-			<table class="table table-condensed">
-			<tbody ng-repeat="section in template.sections">
-			<tr> <td>Name</td>  <td>{{section.name}}</td> </tr>
-			<tr> <td>Multiple</td>  <td>{{section.multiple}}</td> </tr>
-			<tr> <td>Optional</td>  <td>{{section.optional}}</td> </tr>
-			<tr> <td>Template</td>  <td><textarea disabled="true"></textarea>{{section.template}}</textarea></td> </tr>
-			<tr> <td>Variables</td>  <td>
-
-				<table class="table table-condensed">
-				<tbody ng-repeat="field in section.meta">
-				<tr> <td>Name</td>  <td>{{field.name}}</td> </tr>
-				<tr> <td>Label</td>  <td>{{field.label}}</td> </tr>
-				<tr> <td>type</td>  <td>{{field.type}}</td> </tr>
-				<tr> <td>default</td>  <td>{{field.default}}</td> </tr>
-				</tbody>
-				</table>
-
-
-			</td> </tr>
-			</tbody>
-			</table>
-
-		</td> </tr>
-		</table>
+			<div class="row" ng-repeat="field in section.meta">
+				<div class="col-sm-2">&nbsp;</div>
+				<div class="col-sm-10">
+					<hr/>
+					<div class="row"><div class="col-sm-3">Name   </div><div class="col-sm-9">{{field.name}}   </div></div>
+					<div class="row"><div class="col-sm-3">Label  </div><div class="col-sm-9">{{field.label}}  </div></div>
+					<div class="row"><div class="col-sm-3">type   </div><div class="col-sm-9">{{field.type}}   </div></div>
+					<div class="row"><div class="col-sm-3">default</div><div class="col-sm-9">{{field.default}}</div></div>
+				</div>
+			</div>
+		</div>
 	</div>
 	</div>
 </div>
 <div class="button-panel">
 	<a class="btn btn-danger" ui-sref="admin.template.list">Cancel</a>
-	<a class="btn btn-primary" ui-sref="admin.template.edit({conditionId:template._id})">Edit</a>
+	<a class="btn btn-primary" ui-sref="admin.template.edit({templateId:template._id})">Edit</a>
 </div>
 
 
