--- a/modules/projects/client/views/project-partials/project.schedule.milestone.edit.modal.html
+++ b/modules/projects/client/views/project-partials/project.schedule.milestone.edit.modal.html
@@ -8,28 +8,22 @@
 				<div>Milestone: {{myData.data.name}}</div>
 			</div>
 			<div class="form-group has-error" ng-class="{'has-error': validateForm}">
-				<label>Date Range / Effective Date?</label>
+				<!-- <label>Date Range / Effective Date?</label> -->
 				<div class="date-range-control clearfix">
-					<div class="date-range input-group pull-left">
-						<span class="input-group-btn">
-							<button class="btn btn-default">
-								<span class="glyphicon glyphicon-calendar"></span>
-							</button>
-						</span>
-						<!-- {{data.dateStarted}} -->
-						<input class="form-control" type="text" placeholder="mm/dd/yyyy" ng-model="myData.data.dateStartedEst" />
+					<div class="form-group">
+						<label class="control-label">Date Started Estimate</label>
+						<div class="input-group">
+								<p class="form-control-static">{{ myData.data.dateStartedEst | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="myData.data.dateStartedEst" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
+						</div>
 					</div>
-					<div class="pull-left spacer">-</div>
-					<div class="date-range input-group pull-left">
-						<span class="input-group-btn">
-							<button class="btn btn-default">
-								<span class="glyphicon glyphicon-calendar"></span>
-							</button>
-						</span>
-						<input class="form-control" type="text" placeholder="mm/dd/yyyy" ng-model="myData.data.dateCompletedEst"/>
+					<div class="form-group">
+						<label class="control-label">Date Completed Estimate</label>
+						<div class="input-group">
+								<p class="form-control-static">{{ myData.data.dateCompletedEst | amDateFormat:'MMM Do YYYY' }} <a x-modal-date-picker x-selected-date="myData.data.dateCompletedEst" >&nbsp;&nbsp;<i class="glyphicon glyphicon-calendar"></i></a>&nbsp; &nbsp;</p>
+						</div>
 					</div>
 				</div>
-				<div class="help-block">Invalid Date Range Message</div>
+				<!-- <div class="help-block">Invalid Date Range Message</div> -->
 			</div>
 		</div>
 	</div>
