--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -916,15 +916,6 @@ h3.activity-title {
 .table-modal {
 	margin-bottom: 0
 }
-.modal-header {
-	padding: 5px 15px;
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
-}
-
-.modal-footer {
-	padding: 10px 15px;
-}
 
 .modal-header input.form-control {
 	background-color: rgba(255,255,255,0.3);
@@ -1593,6 +1584,7 @@ $left-panel-width: 17rem;
 	padding: 2rem 2.5rem;
 }
 
+
 /* ACTIVITIES LIST
 ------------------------------ */
 .activities-container {
@@ -1655,7 +1647,7 @@ $left-panel-width: 17rem;
 }
 
 
-/* ALERT (CUSTOM 
+/* ALERT (CUSTOM) 
 ------------------------------ */
 .alert-custom {
 	margin-bottom: 2.5rem;
@@ -1704,7 +1696,7 @@ $left-panel-width: 17rem;
 ------------------------------ */ 
 .modal-header,
 .modal-footer {
-	padding: 1.5rem 2rem;
+	padding: 1.25rem 2rem;
 }
 
 .modal-header {
@@ -2222,7 +2214,6 @@ $header-height-sm: 5rem;
 	padding-top: 1.5rem;
 }
 
-
 /* DATE RANGE CONTROL
 ------------------------------ */
 .date-range-control {
@@ -2559,7 +2550,6 @@ hr {
 ------------------------------ */
 /* BEGIN: VIEW/PAGE-SPECIFIC STYLING
 ------------------------------------------------------------ */
-
 
 /* ARTIFACT VIEW
 ------------------------------ */
@@ -3071,6 +3061,225 @@ section.project-info {
 		.btn {
 			padding: 0.6rem;
 		}
+	}
+}
+
+
+/* PUBLIC COMMENT PERIOD VIEW 
+------------------------------ */
+.custom-alert {
+	padding: 1.5rem;
+	border-radius: 4px;
+	background: #17d161;
+}
+
+.public-comment-period-view {
+	.comment-title {
+		margin: 0;
+		margin-bottom: 1rem;
+		font-size: 1.8rem;
+		font-weight: bold;
+	}
+	
+	.comment-row:first-child {
+		border-top: 1px solid #DDD;
+	}
+	
+	.comment {
+		margin: 0;	
+	}
+	
+	.attachment-col {
+		width: 4rem;
+		text-align: center;
+	}
+		
+	td.status-col {
+		width: 12rem;
+		
+		.label {
+			display: block;
+			height: 2rem;
+			padding: 0;
+			line-height: 2rem;
+			font-size: 1.2rem;
+			font-weight: normal;
+		}
+	}
+}
+
+@media (max-width: 480px) {
+	.public-comment-period-view {
+		.table {
+			th {
+				width: 50%;
+				text-align: center;
+			}
+			
+			.attachment-col {
+				display: none;
+			}
+			
+			td.date-col {
+				padding-bottom: 0;
+			}
+		}
+	}
+}
+
+@media (min-width: 480px) and (max-width: 1024px) {
+	.public-comment-period-view {
+		td.attachment-col {
+			position: absolute;
+			top: 1.4rem;
+			right: 10.5rem
+		}
+		
+		td.date-col {
+			position: absolute;
+			top: 2.1rem;
+			right: 2rem;
+			padding: 0;
+		}
+		
+		td.status-col {
+			position: absolute;
+			top: 2rem;
+			right: 2rem;
+			padding: 0;
+		}
+	}
+}
+
+@media (max-width: 1200px) {
+	.public-comment-period-view {
+		.table {
+			table-layout: inherit;
+			
+			.no-mobile {
+				display: none;
+			}
+			
+			thead {
+				border: none;
+				
+				tr {
+					padding: 0;
+					border: none;
+				}
+			
+				th {
+					margin-bottom: 1rem;
+					display: block;
+					float: left;
+					text-align: center;
+				}
+			}
+			
+			tr {
+				position: relative;
+				display: block;
+				padding: 2rem 1rem;
+				border: 1px solid #DDD;
+				border-top: none;
+			}
+					
+			tr:last-child {
+				display: none;
+			}
+			
+			> tbody > tr > td {
+				display: block;
+				border-top: none;
+			}
+			
+			td.comment-col {
+				padding-top: 0;
+			}
+		
+			td.pillar-col,
+			td.vc-col {
+				padding-top: .5rem;
+				color: #888;
+			}
+			
+			td.vc-col {
+				padding-bottom: 0;
+			}
+			
+			td.pillar-col:before {
+				content: "Pillars";
+				display: block;
+				font-size: 1.4rem;
+				font-weight: bold;
+				color: #000;
+			}
+			
+			td.vc-col:before {
+				content: "Valued Components";
+				display: block;
+				font-size: 1.4rem;
+				font-weight: bold;
+				color: #000;
+			}
+		}
+	}
+}
+
+@media (min-width: 1200px) {
+	.public-comment-period-view {
+		.table {
+			table-layout: fixed;
+			width: 100%;
+			max-width: 100%;
+			
+			> thead > tr > th {
+				padding-left: 0.5rem;
+				padding-right: 0.5rem;
+			}
+			
+			> tbody > tr > td {
+				padding: 2rem 1rem;
+			}
+		}
+		.comment-col {
+			width: 40%;
+		}
+		
+		.vc-col {
+			width: 20rem;
+		}
+		
+		.date-col {
+			width: 12rem;
+		}
+		
+		.status-col {
+			width: 13rem;
+		}
+	}
+}
+
+.public-comment-detail-modal {
+	p {
+		margin-bottom: 2rem;
+		line-height: 2.2rem;
+	}
+	
+	.comment-info {
+		margin-bottom: 1.5rem;
+		font-size: 1.8rem;
+	}
+	
+	.detail-row:last-child,
+	.list-group {
+		margin-bottom: 0;
+	}
+	
+	section h3 {
+		margin-bottom: 0.75rem;
+		font-size: 1.6rem;
+		font-weight: bold;
 	}
 }
 
