--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1743,9 +1743,12 @@ $left-panel-width: 17rem;
 
 /* MODAL OVERRIDES
 ------------------------------ */ 
+$modal-body-bg: #f7f8fa;
+
 .modal-header,
 .modal-footer {
 	padding: 1.25rem 2rem;
+	border: none;
 }
 
 .modal-header {
@@ -1770,6 +1773,7 @@ $left-panel-width: 17rem;
 
 .modal-body {
 	padding: 2rem;
+	background: $modal-body-bg;
 }
 
 
@@ -2544,11 +2548,6 @@ textarea {
 
 .checkbox {
 	margin-right: 2rem;
-	
-	input {
-		margin-right: 0.5rem;
-		top: 2px;
-	}
 }
 
 
@@ -3130,6 +3129,10 @@ section.project-info {
 		font-weight: bold;
 	}
 	
+	.comment-row {
+		background: #FFF;
+	}
+	
 	.comment-row:first-child {
 		border-top: 1px solid #DDD;
 	}
@@ -3163,10 +3166,6 @@ section.project-info {
 			th {
 				width: 50%;
 				text-align: center;
-			}
-			
-			.attachment-col {
-				display: none;
 			}
 			
 			td.date-col {
@@ -3240,6 +3239,10 @@ section.project-info {
 			> tbody > tr > td {
 				display: block;
 				border-top: none;
+			}
+			
+			.attachment-col {
+				display: none;
 			}
 			
 			td.comment-col {
@@ -3329,6 +3332,73 @@ section.project-info {
 		margin-bottom: 0.75rem;
 		font-size: 1.6rem;
 		font-weight: bold;
+	}
+}
+
+.attachments {
+	.list-group-item {
+		position: relative;
+	}
+	
+	.file-name {
+		margin-right: 4rem;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+	
+	.file-progress {
+		margin-top: 0.5rem;
+		margin-bottom: 0.5rem;
+		height: 1.3rem;
+	}
+	
+	.file-action {
+		position: absolute;
+		top: 0.4rem;
+		right: 0.5rem;
+		border: none;
+	}
+}
+
+@media (min-width: 480px) {
+	.attachments {
+		.file-name {
+			margin-right: 15rem;
+		}
+		
+		.file-progress {
+			position: absolute;
+			top: 0.8rem;
+			right: 4.5rem;
+			width: 10rem;
+		}
+	}
+}
+
+
+.attachments-upload-target {
+	position: relative;
+	padding: 2rem;
+	text-align: center;
+	color: #999;
+	border: 2px dashed #CCC;
+	border-radius: 4px;
+	background: #EEE;
+	
+	strong {
+		color: #000;
+	}
+	
+	input {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		opacity: 0;
+		filter: alpha(opacity=0);
 	}
 }
 
