--- a/modules/projects/client/views/project-partials/project.public.comments.html
+++ b/modules/projects/client/views/project-partials/project.public.comments.html
@@ -6,6 +6,8 @@
     
     <div class="view-body-container">
         
+        <button data-toggle="modal" data-target="#submitCommentModal">Test Comment Modal</button>
+        
         <!-- PROTOTYPE PUBLIC ROW TEMPLATES  -->
         <table ng-table="tableParams" show-filter="true" class="table table-striped table-hover">			
             <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
@@ -51,7 +53,6 @@
                 <td colspan="5">No records found.</td>
             </tr>
         </table><!-- / PROTOTYPE PUBLIC ROW TEMPLATES  -->
-        
         
         <!-- PROTOTYPE EAO STAFF ROW TEMPLATES  -->
         <table ng-table="tableParams" show-filter="true" class="table table-striped table-hover hidden">			
@@ -128,9 +129,12 @@
                     </div>
                     <div class="detail-row">
                     <label>Attachments</label>
-                        <div class="list-group">
+                        <div class="attachments list-group">
                             <a class="list-group-item">
-                            <span>file-name-1.jpg (10mb)</span><span class="glyphicon glyphicon-download-alt pull-right"></span> 
+                                <span class="file-name">file-name-1.jpg</span>
+                                <button class="file-action btn btn-link">
+                                    <span class="glyphicon glyphicon-download-alt"></span>
+                                </button> 
                             </a>
                             <a class="list-group-item">
                                 <span>file-name-1.jpg (20mb)</span><span class="glyphicon glyphicon-download-alt pull-right"></span> 
@@ -147,4 +151,95 @@
 		</div>
 	</div>
 </div><!-- / COMMENT DETAIL MODAL -->
+
+<!-- SUBMIT COMMENT MODAL  -->
+<div class="public-comment-modal modal fade" id="submitCommentModal" role="dialog" tabindex="-1">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<h3 class="modal-title">Submit a Comment</h3>
+			</div>
+			<div class="modal-body">  
+                <form>
+                    <fieldset>
+                        <div class="row">
+                            <div class="form-group col-sm-12 col-md-6">
+                                <label class="control-label">Name<em>Optional</em></label>
+                                <input class="form-control" placeholder="Anonymous" type="text" />
+                            </div>
+                            <div class="form-group col-sm-12 col-md-6">
+                                <label class="control-label">Location<em>Optional</em></label>
+                                <input class="form-control" placeholder="IE: City, Province" type="text" />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group col-sm-12">
+                                <div class="checkbox">
+                                    <label><input type="checkbox" />Make my name and location visible to public.</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group col-sm-12">
+                                <label class="control-label">Comment</label>
+                                <textarea class="form-control" rows="10"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group col-sm-12">
+                                <label class="control-label">Attachments</label>
+                                <ul class="attachments list-group">
+                                    <li class="list-group-item clearfix">
+                                        <div class="file-name">file-name-1.jpg</div>
+                                        <div class="file-progress progress">
+                                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                                                <span class="sr-only"></span>
+                                            </div>
+                                        </div>
+                                        <button class="file-action btn btn-link">
+                                            <span class="glyphicon glyphicon-remove"></span>
+                                        </button>
+                                    </li>
+                                     <li class="list-group-item clearfix">
+                                        <div class="file-name">file-name-1-really-really-really-really-long-file-name.jpg</div>
+                                        <div class="file-progress progress">
+                                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                                                <span class="sr-only"></span>
+                                            </div>
+                                        </div>
+                                        <button class="file-action btn btn-link">
+                                            <span class="glyphicon glyphicon-remove"></span>
+                                        </button>
+                                    </li>
+                                    <li class="list-group-item clearfix">
+                                        <div class="file-name">file-name-1-really-really-really-really-long-file-name.jpg</div>
+                                        <div class="file-progress progress">
+                                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                                                <span class="sr-only"></span>
+                                            </div>
+                                        </div>
+                                        <button class="file-action btn btn-link">
+                                            <span class="glyphicon glyphicon-remove"></span>
+                                        </button>
+                                    </li>
+                                </ul>
+                                <div class="attachments-upload-target">
+                                    <input type="file" multiple accept=".jpg,.jpeg,.pdf" />
+                                    <div><strong>Drag and Drop</strong> or <strong>Click Here</strong> to attach files</div>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-success" data-dismiss="modal">Submit Comment</button>
+			</div>
+		</div>
+	</div>
+</div><!-- / SUBMIT COMMENT MODAL -->
 
